[package]
name = "hexagn-two"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
ssa = { git = "https://github.com/emm312/ssa" }
codespan-reporting = "0.11.1"
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm16-0"], optional = true }

[build-dependencies]
lalrpop = { version = "0.20.0", features = ["lexer"] }

[features]
default = ["llvm"]
llvm = ["inkwell"]

[profile.release]
lto = true
codegen-units = 1
strip = true
